ffffidget - Fidget Virtual

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -320,6 +320,21 @@
         <a class="resource-button" href="https://trello.com" target="_blank">Veja</a>
       </li>
       
+      <li>
+        <div class="resource-icon">
+          <a href="https://ffffidget.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://ffffidget.com/" target="_blank">ffffidget</a>
+          </h2>
+          <p>Fidget Virtual</p>
+        </div>
+        <a class="resource-button" href="https://ffffidget.com/" target="_blank">Veja</a>
+      </li>
+      
 
     </ul>
       <ul class="sidebar-navigation">
