--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -178,6 +178,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">Pace</a>
+          </h2>
+          <p>Automatic page load progress bar</p>
+        </div>
+        <a class="resource-button" href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">Veja</a>
+      </li> 
+
+      <li>
+        <div class="resource-icon">
           <a href="https://thinker3197.github.io/progressively/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
