Steps To Successfully Create HTML/CSS Email Template

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -339,6 +339,25 @@
             <a class="resource-button" href="https://www.emailonacid.com/blog" target="_blank">Veja</a>
           </li>
 
+          <div class="linha"></div>        
+            <h2 class="margen-titulo color-frontend">Tutoriais</h2>
+          <div class="linha"></div>
+
+          <li>
+            <div class="resource-icon">
+              <a href="https://www.script-tutorials.com/steps-to-successfully-create-htmlcss-email-template/" target="_blank">
+                <img src="../../base/images/scriptTutorials.jpg" />
+              </a>
+            </div>
+            <div class="resource-details">
+              <h2>
+                <a href="https://www.script-tutorials.com/steps-to-successfully-create-htmlcss-email-template/" target="_blank">Steps To Successfully Create HTML/CSS Email Template</a>
+              </h2>
+              <p>Scripts Tutoriais</p>              
+            </div>
+            <a class="resource-button" href="https://www.script-tutorials.com/steps-to-successfully-create-htmlcss-email-template/" target="_blank">Veja</a>
+          </li>
+
         </ul>
         
          <ul class="sidebar-navigation">
