The Most Detailed PSD to HTML Tutorial

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1808,6 +1808,21 @@
         </div>
         <a class="resource-button" href="https://onebitcode.com/course/ruby-puro/" target="_blank">Veja</a>   
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://1stwebdesigner.com/psd-to-html/#psd-to-html" target="_blank">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/16265189_10154128639166837_4261067724060668383_n.png?_nc_cat=105&oh=ddd9f09fa2b3010347d95e82af6638c1&oe=5C2226C4" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://1stwebdesigner.com/psd-to-html/#psd-to-html" target="_blank">The Most Detailed PSD to HTML Tutorial</a>
+          </h2>
+          <p>1st Web Designer</p>
+        </div>
+        <a class="resource-button" href="https://1stwebdesigner.com/psd-to-html/#psd-to-html" target="_blank">Veja</a>   
+      </li>
         
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>
