Prototyping a Quotes App using Sketch and Flinto for Mac

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -530,6 +530,21 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://medium.com/sketch-app-sources/prototyping-a-quotes-app-using-sketch-and-flinto-for-mac-76c138cf278b" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/sketch-app-sources/prototyping-a-quotes-app-using-sketch-and-flinto-for-mac-76c138cf278b" target="_blank">Prototyping a Quotes App using Sketch and Flinto for Mac</a>
+          </h2>
+          <p>Design + Sketch</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/sketch-app-sources/prototyping-a-quotes-app-using-sketch-and-flinto-for-mac-76c138cf278b" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.xdguru.com/adobe-xd-guide/" target="_blank">
             <img src="../../base/images/xdguru.jpg" alt="#" />
           </a>
