--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -560,6 +560,21 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://medium.com/@kollinz/hamburger-menu-alternatives-for-mobile-navigation-a3a3beb555b8" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/@kollinz/hamburger-menu-alternatives-for-mobile-navigation-a3a3beb555b8" target="_blank">Hamburger menu alternatives for mobile navigation</a>
+          </h2>
+          <p>Zoltan Kollin</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/@kollinz/hamburger-menu-alternatives-for-mobile-navigation-a3a3beb555b8" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.xdguru.com/adobe-xd-guide/" target="_blank">
             <img src="../../base/images/xdguru.jpg" alt="#" />
           </a>
