Web para todos - Fodado em usabilidade

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -370,6 +370,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://mwpt.com.br/novidades/" target="_blank">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/21751273_1587811881286037_3244959824989961902_n.png?_nc_cat=106&oh=97ac554bc19391a7396f56d3b2435660&oe=5C58E90E" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://mwpt.com.br/novidades/" target="_blank">Web para Todos</a>
+          </h2>
+          <p>Focado em acessibilidade</p>
+        </div>
+        <a class="resource-button" href="http://mwpt.com.br/novidades/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Blogs Internacionais</h2>
       <div class="linha"></div>
