Los Mejores Resursos SEO

--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -165,6 +165,21 @@
         </div>
         <a class="resource-button" href="http://www.seolution.com/best-seo-blogs/" target="_blank">Veja</a>
       </li>    
+         
+      <li>
+        <a href="https://www.canalip.com/blog/los-mejores-recursos-seo/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/21369656_10156685226770884_5333886775398268788_n.png?_nc_cat=109&oh=8cc1c4aac5f1ee1721cc1eb2ad9e1f44&oe=5C4E6BA8" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.canalip.com/blog/los-mejores-recursos-seo/" target="_blank">Los Mejores Recursos SEO</a>
+          </h2>
+          <p>SEO blogs</p>
+        </div>
+        <a class="resource-button" href="https://www.canalip.com/blog/los-mejores-recursos-seo/" target="_blank">Veja</a>
+      </li>    
            
       <div class="linha"></div>    
       <h2 class="margen-titulo color-seo">Ferramentas</h2>    
