--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -286,6 +286,21 @@
         </div>
         <a class="resource-button" href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&oh=8db6315dbceb8f8c25f679a3d58a375c&oe=5C4B81C3" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">Growth Hacking: O Guia Definitivo</a>
+          </h2>
+          <p>Cresça em ritmo acelerado</p>
+        </div>
+        <a class="resource-button" href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
+      </li>
     
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Ferramentas</h2>        
