Bootstrap Sidebar Examples

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1853,6 +1853,21 @@
         </div>
         <a class="resource-button" href="https://pt.stackoverflow.com/questions/215148/mudar-cor-da-imagem-com-css" target="_blank">Veja</a>   
       </li>
+
+      <li>
+        <a href="https://bootsnipp.com/tags/sidebar" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://bootsnipp.com/tags/sidebar" target="_blank">Bootstrap Sidebar Examples</a>
+          </h2>
+          <p>Bootsnipp</p>
+        </div>
+        <a class="resource-button" href="https://bootsnipp.com/tags/sidebar" target="_blank">Veja</a>   
+      </li>
         
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>
