correcao de links e tags

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -27,18 +27,18 @@
       <div class="linha"></div>
        
       <li>
-        <a href="https://placehold.it/" target="_blank">
+        <a href="https://placeholder.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/placehold.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://placehold.it/" target="_blank">PlaceHold.it</a>
+            <a href="https://placeholder.com/" target="_blank">placeholder.com</a>
           </h2>
           <p>Imagens para prótipos; outra alternativa é o <a href="https://dummyimage.com/" target="_blank"><mark>Dynamic Dummy Image</mark></a></p>
         </div>
-        <a class="resource-button" href="https://placehold.it/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://placeholder.com/" target="_blank">Veja</a>
       </li>  
 
       <li>
@@ -51,7 +51,7 @@
           <h2>
             <a href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Gerador de Loren Ipsum</a>
           </h2>
-          <p>Gerador de Loren Ipsum 4devs</p>
+          <p>Gerador de Loren Ipsum 4devs | Outra alterantiva é <a href="https://placeholder.com/text/lorem-ipsum/" target="_blank"><mark>Placaholder Text</mark></a></p>
         </div>
         <a class="resource-button" href="https://www.4devs.com.br/gerador_de_texto_lorem_ipsum" target="_blank">Veja</a>
       </li>
