Web Designer Depot

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1715,6 +1715,22 @@
         <div id="tutoriais"></div>   
       </li>
 
+      <li>
+        <a href="https://www.webdesignerdepot.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&oh=f35d80f57b15c07ceaac3913d3c48430&oe=5C51E2F2" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.webdesignerdepot.com/" target="_blank">Web Designer Depot</a>
+          </h2>
+          <p>Blogs</p>
+        </div>
+        <a class="resource-button" href="https://www.webdesignerdepot.com/" target="_blank">Veja</a>
+        <div id="tutoriais"></div>   
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Tutoriais</h2>
       <div class="linha"></div>
