--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1716,6 +1716,22 @@
       </li>
 
       <li>
+        <a href="https://webdesignledger.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p480x480/11960268_1014046558615593_1972434264799813720_n.png?_nc_cat=110&oh=a301496f1673aeec763583994ec1e940&oe=5C4BC782" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://webdesignledger.com/" target="_blank">Web Design Ledger</a>
+          </h2>
+          <p>Blogs</p>
+        </div>
+        <a class="resource-button" href="https://webdesignledger.com/" target="_blank">Veja</a>
+        <div id="tutoriais"></div>   
+      </li>
+
+      <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&oh=f35d80f57b15c07ceaac3913d3c48430&oe=5C51E2F2" alt="#" />
