trocando cor do :hover do botao

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -366,6 +366,21 @@
         <a class="resource-button" href="https://ffffidget.com/" target="_blank">Veja</a>
       </li>
       
+      <li>
+        <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&oh=79e13898d8017f42bc981d0b6f024a30&oe=5C15B656" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">Ferramentas para ambiente de trabalho  colaborativo</a>
+          </h2>
+          <p>Marketing de Conteúdo</p>
+        </div>
+        <a class="resource-button" href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
+      </li>
+      
 
     </ul>
       <ul class="sidebar-navigation">
