e-commerce brasil blog

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -192,6 +192,21 @@
         </div>
         <a class="resource-button" href="http://viverdeblog.com/" target="_blank">Veja</a>
 		  </li>
+        
+      <li>
+        <a href="https://www.ecommercebrasil.com.br/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/17796306_1531704723506287_766375710109810577_n.png?_nc_cat=105&oh=1989541854d5e7ecd2ab36a927680582&oe=5C49E41F" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.ecommercebrasil.com.br/" target="_blank">e-commerce Brasil</a>
+          </h2>
+          <p>Excelência em e-commerce</p>
+        </div>
+        <a class="resource-button" href="https://www.ecommercebrasil.com.br/" target="_blank">Veja</a>
+		  </li>
     
       <li>
         <a href="https://www.publicitarioscriativos.com/" target="_blank">
