--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -339,7 +339,7 @@
       <li>
         <a href="https://mailchimp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/709825689181147136/SdVd6iit_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&oh=79e13898d8017f42bc981d0b6f024a30&oe=5C15B656" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -394,6 +394,21 @@
           <p>Marketing de Conteúdo</p>
         </div>
         <a class="resource-button" href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <a href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&oh=fd9269b05820883edf3e9ec54547dea0&oe=5C606A03" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">Ferramentas para B2B</a>
+          </h2>
+          <p>Hongkiat</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">Veja</a>
       </li>
       
 
