--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -384,7 +384,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&oh=79e13898d8017f42bc981d0b6f024a30&oe=5C15B656" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=108&oh=8db6315dbceb8f8c25f679a3d58a375c&oe=5C4B81C3" alt="#" />
           </div>
         </a>
         <div class="resource-details">
