10 Hastag Tools for Social Media Marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -411,6 +411,21 @@
         <a class="resource-button" href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">Veja</a>
       </li>
       
+      <li>
+        <a href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&oh=fd9269b05820883edf3e9ec54547dea0&oe=5C606A03" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">Hashtag Tools For Social Media</a>
+          </h2>
+          <p>Hongkiat</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">Veja</a>
+      </li>
+      
 
     </ul>
       <ul class="sidebar-navigation">
