Click-Thru Prototype - Sketch

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -154,6 +154,21 @@
         </div>
         <a class="resource-button" href="https://popapp.in/" target="_blank">Veja</a>
       </li>          
+        
+      <li>
+        <div class="resource-icon">
+          <a href="https://github.com/markhorgan/click-thru-prototype?utm_content=buffer91790&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/markhorgan/click-thru-prototype?utm_content=buffer91790&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" target="_blank">Click-Thru Prototype</a>
+          </h2>
+          <p>Plugin Sketch</p>
+        </div>
+        <a class="resource-button" href="https://github.com/markhorgan/click-thru-prototype?utm_content=buffer91790&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer" target="_blank">Veja</a>
+      </li>          
       
       <li>
         <div class="resource-icon">
