--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1964,6 +1964,21 @@
       </li>
 
       <li>
+        <a href="http://www.codenation.com.br/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/38756566_513523525728253_8078984228538155008_n.png?_nc_cat=111&oh=4e196badc9872b6ed9eda7f00bd3cf1a&oe=5C4B6EF4" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.codenation.com.br/" target="_blank">Code Nation</a>
+          </h2>
+          <p>Learning Code</p>
+        </div>
+        <a class="resource-button" href="http://www.codenation.com.br/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://css-animations.io/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
