--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1730,6 +1730,21 @@
       </li>
 
       <li>
+        <a href="https://codesignal.com/blog/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/19366636_1910380532550479_6227367408235417755_n.png?_nc_cat=106&oh=86858ea307982cc6d12c39d8d3d8c444&oe=5C53527E" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://codesignal.com/blog/" target="_blank">Code Signal</a>
+          </h2>
+          <p>Blogs</p>
+        </div>
+        <a class="resource-button" href="https://codesignal.com/blog/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://www.webdesignerdepot.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/24862500_10155087920666451_2007059699721631428_n.png?_nc_cat=110&oh=f35d80f57b15c07ceaac3913d3c48430&oe=5C51E2F2" alt="#" />
