--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -219,7 +219,6 @@
           <p>Test your site at different screen resolutions & devices | Outra alternativa para testes é o navegador: <a href="https://blisk.io/" target="_blank"><mark>Blisk</a></mark></p>
         </div>
         <a class="resource-button" href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">Veja</a>
-        <div id="css"></div>
       </li> 
 
       <li>
@@ -235,6 +234,22 @@
           <p>CSS Grid</p>
         </div>
         <a class="resource-button" href="https://gist.github.com/bartholomej/8415655" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
+
+      <li>
+        <a href="https://www.indiehackers.com/products" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&oh=2b4fcf32b509a5aa48fb3f6030dad9db&oe=5C5DFFBE" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.indiehackers.com/products" target="_blank">Indie Hackers</a>
+          </h2>
+          <p>Products by Indie Hackers</p>
+        </div>
+        <a class="resource-button" href="https://www.indiehackers.com/products" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
