--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1772,6 +1772,21 @@
           <p>Blogs</p>
         </div>
         <a class="resource-button" href="https://www.webdesignerdepot.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://cssauthor.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/15420771_1563459993667829_3881871322970380143_n.jpg?_nc_cat=107&oh=67a21d91fd6451660e5ff4b255f96fea&oe=5C52D1F3" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://cssauthor.com/" target="_blank">Css Author</a>
+          </h2>
+          <p>Blogs</p>
+        </div>
+        <a class="resource-button" href="https://cssauthor.com/" target="_blank">Veja</a>
         <div id="tutoriais"></div>   
       </li>
 
