link - rolagem para sessao estudo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1942,6 +1942,7 @@
           <p>Bootsnipp</p>
         </div>
         <a class="resource-button" href="https://bootsnipp.com/tags/sidebar" target="_blank">Veja</a>   
+        <div id="estudo"></div>  
       </li>
         
       <div class="linha"></div>
@@ -2318,6 +2319,7 @@
       <li><a class="scroll" href="#utilitarios">Utilitários</a></li>
       <li><a class="scroll" href="#blogs">Blogs</a></li>
       <li><a class="scroll" href="#tutoriais">Tutoriais</a></li>
+      <li><a class="scroll" href="#estudo">Estudo</a></li>
       <li><a class="scroll" href="#foruns">Fóruns</a></li>
     </ul>    
 	
