--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2129,6 +2129,21 @@
         <a class="resource-button" href="https://zm4.bz/OM2LaEld" target="_blank">Veja</a>   
       </li>
 
+      <li>
+        <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&oh=59ff0a9db8abdd5e8538bdfd7a7a7bbc&oe=5C5A75F6" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">Web Designer x Desenvolvedor Web – Entenda a diferença!</a>
+          </h2>
+          <p>BeCode | outras definições <a href="https://css-tricks.com/forums/topic/web-developer-vs-front-end-developer/" target="_blank"><mark>CSS Tricks</mark></a></p>
+        </div>
+        <a class="resource-button" href="https://becode.com.br/web-designer-x-desenvolvedor-web-entenda-a-diferenca/" target="_blank">Veja</a>   
+      </li>
+
       <div id="foruns"></div>
 
       <div class="linha"></div>
