--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -316,6 +316,21 @@
         </div>
         <a class="resource-button" href="https://rockcontent.com/guia/growth-hacking/?utm_content=44564483&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/12107129_10153622035399383_1373534565017675651_n.png?_nc_cat=110&oh=3d2a619f0237dfe1b723f253184fbc49&oe=5C4FCB65" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">Social Media Marketing  Industry Report</a>
+          </h2>
+          <p>Social Media Examiner</p>
+        </div>
+        <a class="resource-button" href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">Veja</a>
+      </li>
     
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Ferramentas</h2>        
