--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -252,6 +252,25 @@
         </div>
         <a class="resource-button" href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
       </li>
+      
+      <div class="linha"></div>
+        <h2 class="margen-titulo color-frontend">Blogs Internacionais</h2>
+      <div class="linha"></div>
+
+      <li>
+        <a href="https://builtvisible.com/blog/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://media.licdn.com/dms/image/C560BAQFCwfdxPsFRZA/company-logo_200_200/0?e=2159024400&v=beta&t=Jrbo8fAPxTfyOOSkN5Mpk773Ys4EjX2AYiuikx5pcDY" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://builtvisible.com/blog/" target="_blank">Buildvisible</a>
+          </h2>
+          <p>Blog Marketing e SEO</p>
+        </div>
+        <a class="resource-button" href="https://builtvisible.com/blog/" target="_blank">Veja</a>
+      </li>
 
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Estudo</h2>        
