--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -265,7 +265,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://builtvisible.com/blog/" target="_blank">Buildvisible</a>
+            <a href="https://builtvisible.com/blog/" target="_blank">Builtvisible</a>
           </h2>
           <p>Blog Marketing e SEO</p>
         </div>
