--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2040,6 +2040,21 @@
       </li>
 
       <li>
+        <a href="http://moodle.easycomtec.com/index.php?" target="_blank">
+          <div class="resource-icon">
+            <img src="http://moodle.easycomtec.com/pluginfile.php/1/core_admin/logo/0x100/1496266632/LogoEasy.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://moodle.easycomtec.com/index.php?" target="_blank">Easycomtec</a>
+          </h2>
+          <p>Learning Code | <a href="https://www.easycomtec.com/representative" target="_blank"><mark>Trabalhe Conosco</mark></a></p>
+        </div>
+        <a class="resource-button" href="http://moodle.easycomtec.com/index.php?" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://css-animations.io/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
