Morning Score Blog

--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -182,6 +182,21 @@
         </div>
         <a class="resource-button" href="https://www.canalip.com/blog/los-mejores-recursos-seo/" target="_blank">Veja</a>
       </li>    
+         
+      <li>
+        <a href="https://morningscore.io/blog/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/27544792_142874476406611_5804344329479977520_n.png?_nc_cat=111&oh=5aeef0706928530ab64bab7d72a94584&oe=5C54E23E" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://morningscore.io/blog/" target="_blank">Morning Score Blog</a>
+          </h2>
+          <p>SEO blogs</p>
+        </div>
+        <a class="resource-button" href="https://morningscore.io/blog/" target="_blank">Veja</a>
+      </li>    
 
       <div id="ferramentas"></div>
            
