Vyond - Create Animated Videos for your Business

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1719,6 +1719,20 @@
 				<a class="resource-button" href="https://gifs.com/" target="_blank">Veja</a>				
 			</li>
 
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.vyond.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.vyond.com/" target="_blank">Vyond</a> </h2>
+					<p>Make Media That Moves</p>
+					<p>Create Animated Videos for your Business</p>
+				</div>
+				<a class="resource-button" href="https://www.vyond.com/" target="_blank">Veja</a>				
+			</li>
+
 			<div id="outros"></div>
 
 			<div class="linha"></div>
