Font Awesome PS

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -870,6 +870,21 @@ Ilustração Digital</a>
         </div>
         <a class="resource-button" href="https://www.guiacommarketing.com.br/blog/15-ferramentas-de-design-grafico-on-line/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="http://creativedo.co/FontAwesomePS" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://creativedo.co/FontAwesomePS" target="_blank">Font Awesome PS</a>
+          </h2>
+          <p>Font Awesome icons right inside Adobe Photoshop</p>
+        </div>
+        <a class="resource-button" href="http://creativedo.co/FontAwesomePS" target="_blank">Veja</a>
+      </li>
       
       </ul>
         <ul class="sidebar-navigation">
