Calculadora de Contraste

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -659,6 +659,19 @@
 					<p>Pantone para hex code</p>
 				</div>
 				<a class="resource-button" href="https://margaret2.github.io/pantone-colors/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://fabridamazio.github.io/Calculadora-de-Constraste-de-Cores/#%233949AB-on-%2380CBC4" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="#" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://fabridamazio.github.io/Calculadora-de-Constraste-de-Cores/#%233949AB-on-%2380CBC4" target="_blank">Calculadora de Contraste</a> </h2>
+					<p>Fabridamazio</p>
+				</div>
+				<a class="resource-button" href="https://fabridamazio.github.io/Calculadora-de-Constraste-de-Cores/#%233949AB-on-%2380CBC4" target="_blank">Veja</a>
 				<div id="icones"></div>
 			</li>
 
