Aprendendo Padrões de Projeto com Javascript

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2053,6 +2053,21 @@
         </div>
         <a class="resource-button" href="http://moodle.easycomtec.com/index.php?" target="_blank">Veja</a>   
       </li>
+      
+      <li>
+        <a href="https://github.com/fhferreira/aprendendo-padroes-de-projeto-javascript/blob/master/README.md" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/fhferreira/aprendendo-padroes-de-projeto-javascript/blob/master/README.md" target="_blank">Aprendendo Padrões de Projeto com Javascript</a>
+          </h2>
+          <p>Um livro de Addy Osmani</p>
+        </div>
+        <a class="resource-button" href="https://github.com/fhferreira/aprendendo-padroes-de-projeto-javascript/blob/master/README.md" target="_blank">Veja</a>   
+      </li>
 
       <li>
         <a href="https://css-animations.io/" target="_blank">
