Teste de compatibilidade com dispositivos moveis

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -102,6 +102,21 @@
       </li>
 
       <li>
+        <a href="https://search.google.com/test/mobile-friendly?utm_source=mft&utm_medium=redirect&utm_campaign=mft-redirect&utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://search.google.com/test/mobile-friendly?utm_source=mft&utm_medium=redirect&utm_campaign=mft-redirect&utm_source=blog&utm_campaign=rc_blogpost" target="_blank">Teste de compatibilidade com dispositivos móveis</a>
+          </h2>
+          <p>Sua página da Web é compatível com dispositivos móveis?</p>
+        </div>
+        <a class="resource-button" href="https://search.google.com/test/mobile-friendly?utm_source=mft&utm_medium=redirect&utm_campaign=mft-redirect&utm_source=blog&utm_campaign=rc_blogpost" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="http://museum.php.net/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
