Initializr - Start an HTML5 project in 15 seconds!

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -87,6 +87,21 @@
       </li>
 
       <li>
+        <a href="http://www.initializr.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/frontEndBrasil.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.initializr.com/" target="_blank">Initializr</a>
+          </h2>
+          <p>Template para inicializar um novo projeto, limpo e customizável conforme a necessidade</p>
+        </div>
+        <a class="resource-button" href="http://www.initializr.com/" target="_blank">Veja</a> 
+      </li>
+
+      <li>
         <a href="http://duoload.verou.me/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
