Curso - Checklist Novo Anunciante

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -350,6 +350,21 @@
         </div>
         <a class="resource-button" href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/12391987_1055348234517664_8583901826881431271_n.png?_nc_cat=101&_nc_ht=scontent.fcwb1-1.fna&oh=eb4d566e126f439537151cae644c9689&oe=5C41F330" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">Curso: Checklist Novo Anunciante</a>
+          </h2>
+          <p>Adriano Gianini</p>
+        </div>
+        <a class="resource-button" href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">Veja</a>
+      </li>
     
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Ferramentas</h2>        
