--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -535,6 +535,21 @@
         </div>
         <a class="resource-button" href="http://jeet.gs/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://mdbootstrap.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://mdbootstrap.com/" target="_blank">MD Bootstrap</a>
+          </h2>
+          <p>Material Design for Bootstrap 4</p>
+        </div>
+        <a class="resource-button" href="https://mdbootstrap.com/" target="_blank">Veja</a>
+      </li>
 
       <li>
         <a href="https://prismjs.com" target="_blank">
