Quasasr Framework - High Performance Full Frontend Stack

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -550,6 +550,21 @@
         </div>
         <a class="resource-button" href="https://mdbootstrap.com/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://quasar-framework.org/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://avatars3.githubusercontent.com/u/23064371?s=200&v=4" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://quasar-framework.org/" target="_blank">Quasar Framework</a>
+          </h2>
+          <p>High Performance Full Frontend Stack</p>
+        </div>
+        <a class="resource-button" href="https://quasar-framework.org/" target="_blank">Veja</a>
+      </li>
 
       <li>
         <a href="https://prismjs.com" target="_blank">
