apostilas online da caelum

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2100,6 +2100,21 @@
       </li>
 
       <li>
+        <a href="https://www.caelum.com.br/apostilas" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/10155941_10152196905759086_2402332230842303175_n.png?_nc_cat=107&_nc_ht=scontent.fcwb2-1.fna&oh=979b51593b21dcaa9956cbd29e067578&oe=5C49E464" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.caelum.com.br/apostilas" target="_blank">Apostilas Online</a>
+          </h2>
+          <p>Estude com as apostilas mais conhecidas do Brasil (Caelum)</p>
+        </div>
+        <a class="resource-button" href="https://www.caelum.com.br/apostilas" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="http://moodle.easycomtec.com/index.php?" target="_blank">
           <div class="resource-icon">
             <img src="http://moodle.easycomtec.com/pluginfile.php/1/core_admin/logo/0x100/1496266632/LogoEasy.jpg" alt="#" />
