Curso de Marketing Digital Google

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -365,6 +365,21 @@
         </div>
         <a class="resource-button" href="http://www.adrianogianini.com.br/materiais/curso-gratuito-checklist-novo-anunciante-no-adwords-obrigado/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">
+          <div class="resource-icon">
+            <img src="https://instagram.fcwb2-1.fna.fbcdn.net/vp/70fea2c8fe13ba86ac9555c50c4de1a9/5C8211F5/t51.2885-19/s320x320/43913196_616691392092740_6368589416453111808_n.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">Curso: Marketing Digital</a>
+          </h2>
+          <p>Google</p>
+        </div>
+        <a class="resource-button" href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">Veja</a>
+      </li>
     
       <div class="linha"></div>
         <h2 class="margen-titulo color-frontend">Ferramentas</h2>        
