Front end Challenges

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2115,6 +2115,21 @@
       </li>
 
       <li>
+        <a href="https://github.com/lfeh/frontend-challenges" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/lfeh/frontend-challenges" target="_blank">Front End Challenges</a>
+          </h2>
+          <p>Desafios para testar o conhecimento</p>
+        </div>
+        <a class="resource-button" href="https://github.com/lfeh/frontend-challenges" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="http://moodle.easycomtec.com/index.php?" target="_blank">
           <div class="resource-icon">
             <img src="http://moodle.easycomtec.com/pluginfile.php/1/core_admin/logo/0x100/1496266632/LogoEasy.jpg" alt="#" />
